--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <body>
         <div class="container">
             <div class="icon-social">
-                <a href = "https://www.facebook.com/phanhuulan1/"><i class="fab fa-facebook-f"></i></a>
-                <a href = "https://www.instagram.com/phan_huu_lan/"><i class="fab fa-instagram"></i></a>
-                <a href = "https://github.com/PhanHuuLan/"><i class="fab fa-github"></i></a>
-                <a href = "https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKhbwcjRGwPpjKbLvqFGXSHXRfQlWZGnNJWSgRWPmsPrjxlqbrtnwsPJprQQbjFGBwpwhxF"><i class="fas fa-envelope"></i></a>
+                <a href = "https://www.facebook.com/ong.manhh/"><i class="fab fa-facebook-f"></i></a>
+                <a href = "https://www.instagram.com/manhducnguyen__/"><i class="fab fa-instagram"></i></a>
+                
             </div>
             <img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.6435-9/109694105_273348990661974_7800608234729287715_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=-gFFfwAXNd8AX-ceMK_&_nc_ht=scontent-sin6-1.xx&oh=0ccd974b9ebf5a3cfd341423f319c996&oe=60DAC15F" alt="">
-            <h2>Phan Hữu Lân</h2>
-            <p>Hòa Vang-Đà Nẵng</p>
-            <p>Theo nghiệp FrontEnd De-vờ-lớp-pơ</p>
+            <h2>Nguyễn Đức Mạnh</h2>
+            <p>Sóc Sơn - Hà Nội</p>
+         
             <div class="btn-container">
-                <form method="get" action="tel:0339410753">
+                <form method="get" action="tel:0582768316">
                     <button type="submit">Liên Hệ</button>
                 </form>
-                <form method="get" action="https://www.facebook.com/phanhuulan1">
+                <form method="get" action="https://www.facebook.com/ong.manhh">
                     <button type="submit">Kết bạn</button>
                 </form>
             </div>
