--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button type="submit">Addfr Faybuk</button>
                 </form>
                  <form method="get" action="https://www.instagram.com/manhducnguyen__">
-                     <button type="submit">follow Ins</button>
+                     <button type="submit">Follow Ins</button>
             </div>
         </div>
         
