--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <form method="get" action="https://www.facebook.com/ong.manhh">
                     <button type="submit">Addfr Faybuk</button>
                 </form>
-                 <form method="get" action="https://www.instagram.com/manhducnguyen__">
+                 <form method="get" action="https://www.instagram.com/ohmanhnay">
                      <button type="submit">Follow Ins</button>
             </div>
         </div>
