--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="container">
             <div class="icon-social">
                 <a href = "https://www.facebook.com/ong.manhh/"><i class="fab fa-facebook-f"></i></a>
-                <a href = "https://www.instagram.com/manhducnguyen__/"><i class="fab fa-instagram"></i></a>
+                <a href = "https://www.instagram.com/ohmanhnay/"><i class="fab fa-instagram"></i></a>
                 
             </div>
             <img src="https://scontent.fhan3-5.fna.fbcdn.net/v/t39.30808-6/243336925_1564055920612982_8314233298809360038_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=Y0cmC5SHjhAAX9g2Gk1&_nc_ht=scontent.fhan3-5.fna&oh=00_AT-DqSNyQo6SrYMjntPjSFFK3HBqL5ruqKF_hJfPvPT5eQ&oe=626E32E1" alt="">
-            <h2>@Manhducnguyen__</h2>
+            <h2>Nguyen Duc Manh</h2>
             <p>Kuteboisanhdieunhatxom</p>
          
             <div class="btn-container">
