--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="icon-social">
                 <a href = "https://www.facebook.com/linu.mai.12"><i class="fab fa-facebook-f"></i></a>
-                <a href = "https://www.instagram.com/ohmanhnay/"><i class="fab fa-instagram"></i></a>
+<!--                 <a href = "https://www.instagram.com/ohmanhnay/"><i class="fab fa-instagram"></i></a> -->
                 
             </div>
             <img src="https://scontent.fhan3-5.fna.fbcdn.net/v/t39.30808-6/319185618_676560883866293_4890963818503558222_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=gXqzfmnDq54AX-Y7_up&_nc_ht=scontent.fhan3-5.fna&oh=00_AfBXKTkCOkfdCZDPt5VrLAMUTtmNDwGzifnZIb2uw82rXw&oe=639DB0F9" alt="">
